# uefi-palyer

./: .gitignore  Cargo.toml  NvVars
src/: error.rs  fs.rs  graphics.rs  main.rs  video.rs  你好世界main.rs.bak  初始化图片main.rs.bak  展示一张qoi图片main.rs.bak  文件读取main.rs.bak
src/test/: avx_checker.rs  get_cpu_info.rs  get_multi_monitor.rs  get_smbios.rs  mod.rs  mp_service.rs  multi_core_draw.rs  use_embedded_graphics_gop.rs
src/video/: buffer.rs  decoder.rs
