[package]
name = "myuefi"
version = "0.1.0"
edition = "2024"

[dependencies]
less-avc = { version = "0.1.5", default-features = false }
qoicoubeh = { version = "0.5.0", default-features = false, features = ["alloc"] }
shiguredo_mp4 = { version = "2025.4.0", default-features = false }
uefi = { version = "0.36.1", features = ["logger","alloc","global_allocator","panic_handler"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
