[package]
name = "myuefi"
version = "0.1.0"
edition = "2024"

[dependencies]
# 视频解码类
less-avc = { version = "0.1.5", default-features = false }
shiguredo_mp4 = { version = "2025.4.0", default-features = false }
# 图像处理类
qoicoubeh = { version = "0.5.0", default-features = false, features = ["alloc"] }
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
embedded-graphics-gop = "0.4.2"
embedded-graphics = "0.8.1"
# 基础框架类
uefi = { version = "0.36.1", features = ["logger","alloc","global_allocator","panic_handler"] }
log = "0.4.29"
# 信息读取类
raw-cpuid = "11.6.0"


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true
